--- a/package.json
+++ b/package.json
@@ -7,13 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src/",
-    "preview": "vite preview",
-    "compile": "hardhat compile",
-    "test": "hardhat test",
-    "deploy:alfajores": "hardhat run scripts/deploy.js --network alfajores",
-    "deploy:celo": "hardhat run scripts/deploy.js --network celo",
-    "verify:alfajores": "hardhat verify --network alfajores",
-    "verify:celo": "hardhat verify --network celo"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
@@ -34,36 +28,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
-    "@nomicfoundation/hardhat-ethers": "^3.1.0",
-    "@nomicfoundation/hardhat-ignition": "^0.15.13",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.14",
-    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.1.1",
-    "@nomicfoundation/ignition-core": "^0.15.13",
-    "@openzeppelin/contracts": "^5.4.0",
-    "@typechain/ethers-v6": "^0.5.1",
-    "@typechain/hardhat": "^9.1.0",
-    "@types/chai": "^4.3.20",
-    "@types/mocha": "^10.0.10",
-    "@types/node": "^24.9.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
-    "chai": "^4.5.0",
     "dotenv": "^16.6.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
-    "ethers": "^5.8.0",
+    "ethers": "^6.13.4",
     "globals": "^16.4.0",
-    "hardhat": "^2.26.3",
-    "hardhat-gas-reporter": "^1.0.10",
-    "solidity-coverage": "^0.8.16",
-    "ts-node": "^10.9.2",
-    "typechain": "^8.3.2",
     "typescript": "^5.9.3",
     "vite": "^7.1.7"
   }
